Viewport Texture Size Limit causes lags when uv editing with textured viewport on the side #90825

Closed
opened 2021-08-21 12:54:56 +02:00 by Mobin · 16 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1660 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 471.41

Blender Version
Broken: version: 2.93.4 Release Candidate, branch: master, commit date: 2021-08-18 12:30, hash: 63559a779c
Broken: 2.92
Worked: 2.91

Caused by df0bce3f7d

Short description of error
Very bad performance on uv editing with viewport with textures

Exact steps for others to reproduce the error
this can be reproduced simply but here is a quick one:

  1. get a project (here I tested Fox Splash that you can find blender cloud) very important to use a project as I could not reproduce it on anything simple as a cube
  2. add a UV editing workspace
    image.png
  3. turn on textures in viewport
    image.png
  4. try to edit the uvs of the head of the fox
    It lags very hard all of blender goes heavy lag
  5. getting rid of viewport or the texture option in viewport solves it but it did not happen on older version of blender (I tested and 2.90 works fine)
**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1660 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 471.41 **Blender Version** Broken: version: 2.93.4 Release Candidate, branch: master, commit date: 2021-08-18 12:30, hash: `63559a779c` Broken: 2.92 Worked: 2.91 Caused by df0bce3f7d **Short description of error** Very bad performance on uv editing with viewport with textures **Exact steps for others to reproduce the error** this can be reproduced simply but here is a quick one: 1) get a project (here I tested Fox Splash that you can find blender cloud) very important to use a project as I could not reproduce it on anything simple as a cube 2) add a UV editing workspace ![image.png](https://archive.blender.org/developer/F10300355/image.png) 3) turn on textures in viewport ![image.png](https://archive.blender.org/developer/F10300357/image.png) 4) try to edit the uvs of the head of the fox It lags very hard all of blender goes heavy lag 5) getting rid of viewport or the texture option in viewport solves it but it did not happen on older version of blender (I tested and 2.90 works fine)
Author

Added subscriber: @Mobin-2

Added subscriber: @Mobin-2

#89859 was marked as duplicate of this issue

#89859 was marked as duplicate of this issue

#89853 was marked as duplicate of this issue

#89853 was marked as duplicate of this issue
Author

pin pointed it to an option: image.png
If you set texture limit size to anything but off it will cause the massive lag.
also performance is much better in 3.0 but still this option causes performance issues.

pin pointed it to an option: ![image.png](https://archive.blender.org/developer/F10300443/image.png) If you set texture limit size to anything but off it will cause the massive lag. also performance is much better in 3.0 but still this option causes performance issues.
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm, will check.

Can confirm, will check.
Philipp Oeser changed title from lags when uv editing with textured viewport on the side to Viewport Texture Size Limit causes lags when uv editing with textured viewport on the side 2021-09-01 14:22:29 +02:00
Member

Added subscriber: @Jeroen-Bakker

Added subscriber: @Jeroen-Bakker
Member

Yes, known limitation.

An image can have a single GPUTexture. In the image editor the image is always shown by the highest available resolution. In the 3d viewport the texture limit is applied. In this case the user is describing the GPUTexture is created twice per refresh of the screen as the version of the GPUTexture switches.

image_get_gpu_texture implements the switch.
We might consider to store a second GPUTexture for the Limit Resolution setting. But share the GPUTexture when the texture isn't scaled down.

Yes, known limitation. An image can have a single GPUTexture. In the image editor the image is always shown by the highest available resolution. In the 3d viewport the texture limit is applied. In this case the user is describing the GPUTexture is created twice per refresh of the screen as the version of the GPUTexture switches. `image_get_gpu_texture` implements the switch. We might consider to store a second `GPUTexture` for the Limit Resolution setting. But share the GPUTexture when the texture isn't scaled down.
Jeroen Bakker was assigned by Philipp Oeser 2021-09-01 15:02:56 +02:00
Member

Added subscriber: @fclem

Added subscriber: @fclem
Member

Seems like blender is constantly fighting with texture sizes between Workbench and Image Editor and updates it to the GPU all the time with two different sizes?
Is it this issue?

In D9160#230084, @Jeroen-Bakker wrote:

In D9160#229702, @fclem wrote:
I think this might be a problem if the texture is actually used in as a texture in the viewport / render as they would not match the correct limit. Or does the different image user flag ensure different GPU textures?

When rendering in viewport + image editor it switches GPU textures; Basically it has the next paths that lead to a texture switch

Image editor, UV editor => Only use device max resolution as a limit
Workbench/EEVEE => Use device + user pref max resolution as a limit (this is both for final rendering and viewport rendering)
Texture paint (single texture) => Use device + user pref max resolution as a limit (this is both for final rendering and viewport rendering)

When a texture is requested that does not match the previous usage the texture could be switched.

@Jeroen-Bakker : mind checking? (will dare setting it to High prio since this usecase seems quite common?)

Seems like blender is constantly fighting with texture sizes between Workbench and Image Editor and updates it to the GPU all the time with two different sizes? Is it this issue? > In [D9160](https://archive.blender.org/developer/D9160)#230084, @Jeroen-Bakker wrote: >> In [D9160](https://archive.blender.org/developer/D9160)#229702, @fclem wrote: >> I think this might be a problem if the texture is actually used in as a texture in the viewport / render as they would not match the correct limit. Or does the different image user flag ensure different GPU textures? > When rendering in viewport + image editor it switches GPU textures; Basically it has the next paths that lead to a texture switch > > Image editor, UV editor => Only use device max resolution as a limit > Workbench/EEVEE => Use device + user pref max resolution as a limit (this is both for final rendering and viewport rendering) > Texture paint (single texture) => Use device + user pref max resolution as a limit (this is both for final rendering and viewport rendering) > > When a texture is requested that does not match the previous usage the texture could be switched. @Jeroen-Bakker : mind checking? (will dare setting it to High prio since this usecase seems quite common?)
Member

@Jeroen-Bakker: we were typing at the same time, sorry.
Will lower prio then and set to Known Limitation (I do think this quite a bad regression though -- even though the commit of course has its upsides as well...)

@Jeroen-Bakker: we were typing at the same time, sorry. Will lower prio then and set to Known Limitation (I do think this quite a bad regression though -- even though the commit of course has its upsides as well...)
Member

Added subscriber: @Olliver

Added subscriber: @Olliver

This issue was referenced by 2b2d427bba

This issue was referenced by 2b2d427bbac6716092336f0d0f698706a390f4ad
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'

Thank you Jeroen 👍

Thank you Jeroen 👍
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#90825
No description provided.